@@ -10,8 +10,8 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 mainClassName = 'edu.mcw.rgd.Main'
 String myAppName = 'cellosaurus-pipeline'
@@ -29,9 +29,9 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
-    implementation 'org.springframework:spring-beans:5.3.14'
-    implementation 'org.springframework:spring-jdbc:5.3.14'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.20.0.0'
+    implementation 'org.springframework:spring-beans:6.0.13'
+    implementation 'org.springframework:spring-jdbc:6.0.13'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
