@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="main" class="edu.mcw.rgd.Main">
-        <property name="version" value="Cellosaurus pipeline -- build Oct 09, 2023" />
+        <property name="version" value="Cellosaurus pipeline -- build Oct 18, 2023" />
         <property name="sourcePipeline" value="CELLOSAURUS" />
         <property name="oboFile" value="https://ftp.expasy.org/databases/cellosaurus/cellosaurus.obo"/>
         <property name="parser" ref="parser"/>
@@ -158,6 +158,9 @@
                 <entry key="Innoprot" value="137"/>
                 <entry key="DSMZCellDive" value="143"/>
                 <entry key="CancerTools" value="144"/>
+                <entry key="cancercelllines" value="149"/>
+                <entry key="GeneCopoeia" value="150"/>
+                <entry key="Ubigene" value="151"/>
             </map>
         </property>
     </bean>
