@@ -1,3 +1,6 @@
+Oct 18, 2023
+  added handling of xrefs: 'cancercelllines', 'GeneCopoeia', 'Ubigene'
+
 Oct 09, 2023
   renamed 'master' to 'main'
 
